--- a/file/stylesheet.css
+++ b/file/stylesheet.css
@@ -1084,6 +1084,7 @@ audio {
 	height: 93px;
 	background-repeat: no-repeat no-repeat;
 	background-size: 50px 93px;
+	margin: -30px;
 }
 .balloons h2 {
 	text-transform: uppercase;
