--- a/file/stylesheet.css
+++ b/file/stylesheet.css
@@ -1089,7 +1089,8 @@ audio {
 .balloons h2 {
 	text-transform: uppercase;
 	font-family: 'Signika', sans-serif;
-	font-size: 50px;
+	font-size: 30px;
+	text-align: center;
 	color: #BF4136;
 	text-shadow: 5px 5px 5px #FFF;
 	display: none;
