--- a/file/stylesheet.css
+++ b/file/stylesheet.css
@@ -1092,7 +1092,7 @@ audio {
 	font-size: 40px;
 	text-align: center;
 	color: #BF4136;
-	margin-left : 15px;
+	margin-right : 20px;
 	text-shadow: 5px 5px 5px #FFF;
 	display: none;
 }
